# message-broker

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/app/repositories/: message_repository.py
backend/app/routers/: http_router.py  ws_router.py
backend/app/services/: broker_service.py  logger.py  message_service.py  security.py
docs/: REPORT.md
frontend/: Dockerfile  nginx.conf
frontend/src/: app.js  index.html  style.css
scripts/: admin_monitor.sh  consumer.sh  producer.sh  publish.sh  test_broker.sh
scripts/python/: admin_monitor.py  consumer.py
