[project]
name = "message-broker"
version = "0.1.0"
description = "A custom client-server message broker MVP built with FastAPI and SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
